TimeBox Change Log
------------------

TimeBox 0.12: planned
- TRANSFORM.SAX now works on the breakpoints instead of each PAA
  value. This makes the transformation much faster.


TimeBox 0.11.9: planned
- TRANSFORM.SAX no longer Z-normalizes the series.
- Deprecated options: "sax::cut function".
- Deprecated functions: TRANSFORM.SAX.BELL and TRANSFORM.SAX.UNIF.
- Minor bugfixes: number of arguments of MODELS.NN1DTW was incorrect.


TimeBox 0.11.8: released 2016-Apr-21
- Implements MODELS.NN1EUCLIDEAN for fast execution of 1-NN with
  Euclidean distance using early abandon.
- When invoking RUNS.PARTITIONED or RUNS.LEAVEONEOUT without specifying
  a distance function, TimeBox will assume the desired distance is the
  Euclidean distance and will use the fast 1-NN version. To use the old
  MODELS.NN, either explicitly specify a distance function or the
  classification model in the option "runs::model".
- The UCR Suite was incorporated into TimeBox and modified into a MEX
  function. Please view THIRD-PARTY.txt for the UCR Suite copyright
  disclaimer.
- Implements MODELS.NN1DTW for fast execution of 1-NNDTW using the
  lower-bounding and early abandon with the UCR Suite.
- TB.MERGECELLS now returns the removed data as a second argument.
- TB.LOADFILES accepts a matrix as first argument.


TimeBox 0.10.7: released 2016-Mar-18
- Fixes an issue with TB.SHARPSHOOT, implementing options similar to
  those of TB.SCAT.
- Fixes an issue with TB.SCAT which caused arguments to be improperly
  parsed and sometimes ignored.


TimeBox 0.10.6: released 2016-Mar-04
- Introduces functions to get information on data sets without the need
  to load the full data: TS.LOADMETA and TS.SAVEMETA handle meta-
  information within data sets, and TS.GETDIM retrieves the number of
  instances and the length of the series.
- Introduces TS.GETPATH to return the path where a data set file is
  supposed to be stored.
- Allows TS.MAKEFOLDS to make validation folds: you may provide an index